jroller export baked

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 build
 .gradle
+compilation_process_groovy.png
+compilation_process_normal.png
+compilation_process_runtime.png
+groovy-scripting.png
+rage-offline.jpg
+yes-baby.jpg
